# https_dns_proxy_rust

./: .gitignore  ANDROID.md  Cargo.toml  GEMINI.md  LICENSE  README.md  build_android.sh  manage.sh  setup_mips.sh  setup_nightly_mips.sh
.cargo/: config.toml
.github/workflows/: android.yml
android/: build.gradle  gradle.properties  local.properties  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/io/github/SafeDNS/: BootReceiver.kt  MainActivity.kt  ProxyService.kt  ProxyTileService.kt
android/app/src/main/java/io/github/SafeDNS/ui/components/: AboutDialog.kt  DrawerContent.kt  StatusHero.kt
android/app/src/main/java/io/github/SafeDNS/ui/screens/: AppSelectionScreen.kt  DashboardScreen.kt  LogScreen.kt  StatsScreen.kt
android/app/src/main/java/io/github/SafeDNS/ui/theme/: Theme.kt
android/app/src/main/java/io/github/https_dns_proxy_rust/: BootReceiver.kt  MainActivity.kt  ProxyService.kt  ProxyTileService.kt
android/app/src/main/java/io/github/https_dns_proxy_rust/ui/theme/: Theme.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_stat_shield.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: backup_rules.xml
src/: lib.rs  main.rs
