[package]
name = "https_dns_proxy_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls-manual-roots", "socks", "http2", "http3"], default-features = false }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
anyhow = "1"
bytes = "1"
futures-util = "0.3"
trust-dns-resolver = "0.23.2"
nix = { version = "0.29", features = ["user", "fs"] }
daemonize = "0.5"
lazy_static = "1.4"

[profile.release]
opt-level = "z"       # Optimize for size
lto = true            # Enable Link Time Optimization
codegen-units = 1     # Reduce parallel code generation for better optimization
panic = "abort"       # Abort on panic to remove stack unwinding code
strip = true          # Automatically strip symbols from the binary

[profile.release-mips]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true