[package]
name = "https_dns_proxy_rust"
version = "0.3.2"
edition = "2024"
authors = ["sms1sis <sadimsajid2004@gmail.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/sms1sis/https_dns_proxy_rust"
categories = ["os::android", "network-programming", "external-ffi-bindings"]
keywords = ["dns", "doh", "android", "jni", "proxy"]

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = []
jni = ["dep:jni", "dep:tokio-util"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["rustls", "socks", "http2", "http3"], default-features = false }
clap = { version = "4", features = ["derive"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
anyhow = "1"
bytes = "1"
futures-util = "0.3"
hickory-resolver = "0.25"
nix = { version = "0.31.1", features = ["user", "fs"] }
daemonize = "0.5"
chrono = "0.4"
android_logger = "0.15"
moka = { version = "0.12", features = ["future"] }
jni = { version = "0.21", optional = true }
tokio-util = { version = "0.7", optional = true }
log = "0.4"
rustls-platform-verifier = { version = "0.6", features = ["jni"] }

[profile.release]
opt-level = "s"       # Optimize for size and speed (balanced)
lto = true            # Enable Link Time Optimization
codegen-units = 1     # Reduce parallel code generation for better optimization
panic = "abort"       # Abort on panic to remove stack unwinding code
strip = true          # Automatically strip symbols from the binary
